2011-01-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:       Make sure to use CONST/VOID in stead of
	* generic/tclIntDecls.h     const/void when appropriate. This allows to
	* generic/tclIntPlatDecls.h use const/void in the *.decls file always,
	* generic/tclTomMathDecls.h genStubs will do the right thing.

2011-01-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclBasic.c:      Various mismatches between Tcl_Panic 
	* generic/tclCompCmds.c:   format string and its arguments,
	* generic/tclCompExpr.c:   discovered thanks to [Bug 3159920]
	* generic/tclPreserve.c:   (Backported)
	* generic/tclTest.c:

2011-01-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc. BACKPORT.
	* win/configure:      (autoconf-2.59)
	* win/tclWin32Dll.c:  [Patch 3059922]: fixes for mingw64 - gcc4.5.1
	* generic/tclIOCmd.c: [Bug 3148192]: Commands "read/puts" incorrectly
	* tests/chanio.test:  interpret parameters. Improved error-message
	* tests/io.test       regarding legacy form.
	* tests/ioCmd.test

2011-01-15  Kevin B. Kenny  <kennykb@users.sf.net>

	* doc/tclvars.n:
	* generic/tclStrToD.c:
	* generic/tclUtil.c (Tcl_PrintDouble):
	* tests/util.test (util-16.*): Restored full Tcl 8.4 compatibility
	for the formatting of floating point numbers when $::tcl_precision
	is not zero. Added compatibility tests to make sure that excess
	trailing zeroes are suppressed for all eight major code paths.
	[Bug 3157475]

2011-01-13  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (GrowEvaluationStack): Off-by-one error in
	sizing the new allocation - was ok in comment but wrong in the code.
	Triggered by [Bug 3142026] which happened to require exactly one more
	than what was in existence. BACKPORT.

2011-01-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:  Fix "make genstubs", which was broken
	since 2010-11-30, the TclDoubleDigits backport.

2010-12-31  Jan Nijtmans  <nijtmans@users.sf.net>
